--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,15 @@
 		<groupId>org.glassfish.jersey.containers</groupId>
 		<artifactId>jersey-container-servlet-core</artifactId>
 		<version>2.22.2</version>
-</dependency>    
+</dependency>  
+<dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>hibernate-core</artifactId>
+	<version>5.1.0.Final</version>
+</dependency>
+
   </dependencies>
+  
   <!-- Richtige Java Version -->
   <build>
 		<finalName>movieStar</finalName>
