--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,11 @@
 	<artifactId>hibernate-core</artifactId>
 	<version>5.1.0.Final</version>
 </dependency>
-
+<dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.38</version>
+</dependency>
   </dependencies>
   
   <!-- Richtige Java Version -->
