--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ WebContent/WEB-INF/web.xml
 .classpath
 
 target/classes/META-INF/maven/de.hs-bremen/movieStar/pom.properties
+
+src/main/java/local.sql.cfg.xml
