--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 	<artifactId>mysql-connector-java</artifactId>
 	<version>5.1.38</version>
 </dependency>
+   <dependency>  
+      <groupId>org.richfaces.framework</groupId>  
+      <artifactId>richfaces-impl-jsf2</artifactId>  
+      <version>3.3.3.Final</version>  
+    </dependency>  
   </dependencies>
   
   <!-- Richtige Java Version -->
