--- a/pom.xml
+++ b/pom.xml
@@ -71,10 +71,18 @@
        <version>${org.richfaces.bom.version}</version>  
        <scope>import</scope>  
      <type>pom</type>  
-    </dependency>  
+    </dependency>
 
-    
-  </dependencies>
+  <dependency>
+  	<groupId>junit</groupId>
+  	<artifactId>junit</artifactId>
+  	<version>4.11</version>
+  	<scope>test</scope>
+  </dependency>
+
+
+
+	</dependencies>
   
   <!-- Richtige Java Version -->
   <build>
