--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Movie Star</name>
 	<properties>
-		<org.richfaces.bom.version>4.1.0.Final</org.richfaces.bom.version>  
+		<org.richfaces.bom.version>4.1.0.Final</org.richfaces.bom.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -50,42 +50,48 @@
 			<version>1.0</version>
 		</dependency>
 
-    <dependency>
-		<groupId>org.glassfish.jersey.containers</groupId>
-		<artifactId>jersey-container-servlet-core</artifactId>
-		<version>2.22.2</version>
-</dependency>  
-<dependency>
-	<groupId>org.hibernate</groupId>
-	<artifactId>hibernate-core</artifactId>
-	<version>5.1.0.Final</version>
-</dependency>
-<dependency>
-	<groupId>mysql</groupId>
-	<artifactId>mysql-connector-java</artifactId>
-	<version>5.1.38</version>
-</dependency>
-  <dependency>  
-    <groupId>org.richfaces</groupId>  
-       <artifactId>richfaces-bom</artifactId>  
-       <version>${org.richfaces.bom.version}</version>  
-       <scope>import</scope>  
-     <type>pom</type>  
-    </dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+		</dependency>
 
-  <dependency>
-  	<groupId>junit</groupId>
-  	<artifactId>junit</artifactId>
-  	<version>4.11</version>
-  	<scope>test</scope>
-  </dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet-core</artifactId>
+			<version>2.22.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
+		</dependency>
+		<dependency>
+			<groupId>org.richfaces</groupId>
+			<artifactId>richfaces-bom</artifactId>
+			<version>${org.richfaces.bom.version}</version>
+			<scope>import</scope>
+			<type>pom</type>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
 
 
 
 	</dependencies>
-  
-  <!-- Richtige Java Version -->
-  <build>
+
+	<!-- Richtige Java Version -->
+	<build>
 		<finalName>movieStar</finalName>
 		<plugins>
 			<plugin>
